--- a/src/assets/toolkit/styles/partials/base/base.scss
+++ b/src/assets/toolkit/styles/partials/base/base.scss
@@ -25,6 +25,7 @@ button {
   vertical-align: top;
   background: $c-transparent-light;
   border: 0;
+  border-radius: 0;
   padding: 0;
   font-size: 1rem;
   line-height: 1.2;
