--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,5 +1,5 @@
 ---
-title: Overview | Fabricator Styleguide
+title: Overview | Alex Erlandsson Style Guide
 fabricator: true
 ---
 
@@ -13,6 +13,7 @@ fabricator: true
 			height: 150px;
 			margin-right: 15px;
 			margin-bottom: 15px;
+      border: 1px solid #fff;
 		}
 		.color-name {
 			position: absolute;
@@ -40,14 +41,6 @@ fabricator: true
 		<div class="f-item-preview">
 			<div class="color-palette bg-primary"><div class="color-name">Primary</div></div>
 			<div class="color-palette bg-secondary"><div class="color-name">Secondary</div></div>
-		</div>
-	</div>
-	<div class="f-item-group">
-		<div class="f-item-heading-group">
-			<h3 class="f-item-heading">Accent Colors</h3>
-		</div>
-		<div class="f-item-preview">
-			<div class="color-palette bg-accent"><div class="color-name">Accent</div></div>
 		</div>
 	</div>
 </div>
