--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="">
 <head>
 
-	<title>{{#if title}}{{title}}{{else}}Fabricator Styleguide{{/if}}</title>
+	<title>{{#if title}}{{title}}{{else}}Alex Erlandsson Style Guide{{/if}}</title>
 
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -16,6 +16,7 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 	<!-- CSS -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,900" rel="stylesheet">
 	<link rel="stylesheet" href="{{baseurl}}/assets/toolkit/styles/default.css">
 
 </head>
