--- a/src/assets/toolkit/styles/imports/imports.scss
+++ b/src/assets/toolkit/styles/imports/imports.scss
@@ -1,5 +1,6 @@
 // Settings
 // Important: Do not import any SCSS files before these or change its order
+@import '../partials/variables/global-variables';
 @import '../partials/variables/distances';
 @import '../partials/variables/colors';
 @import '../partials/functions/functions';
