--- a/src/assets/toolkit/styles/partials/variables/colors.scss
+++ b/src/assets/toolkit/styles/partials/variables/colors.scss
@@ -38,3 +38,4 @@ $c-fade-light-00:       rgba(255, 255, 255, 0);
 
 // Fade Dark
 $c-fade-dark-00:        rgba(0, 0, 0, 0);
+$c-fade-dark-20:        rgba(0, 0, 0, 0.2);
