Added start page

--- a/src/assets/toolkit/styles/imports/imports-md.scss
+++ b/src/assets/toolkit/styles/imports/imports-md.scss
@@ -2,4 +2,6 @@
 @import '../partials/utilities/utilities-md';
 
 // Modules
+@import '../modules/app/app-md';
+@import '../modules/footer/footer-md';
 @import '../modules/tile-grid/tile-grid-md';
