--- a/src/assets/toolkit/styles/imports/imports.scss
+++ b/src/assets/toolkit/styles/imports/imports.scss
@@ -21,4 +21,5 @@
 @import '../modules/footer/footer';
 @import '../modules/label/label';
 @import '../modules/link/link';
+@import '../modules/overflow-grid/overflow-grid';
 @import '../modules/tile-grid/tile-grid';
