--- a/src/assets/toolkit/styles/modules/footer/footer.scss
+++ b/src/assets/toolkit/styles/modules/footer/footer.scss
@@ -1,3 +1,6 @@
 [data-am-footer] {
-  
+  margin-top: $gutter-quadruple;
+  padding-left: $g-app-gutter;
+  padding-right: $g-app-gutter;
+  padding-bottom: $gutter;
 }
