--- a/src/assets/toolkit/styles/modules/link/link.scss
+++ b/src/assets/toolkit/styles/modules/link/link.scss
@@ -3,6 +3,10 @@
   @include active-scale(0.95);
   display: inline-block;
   color: $c-text-light;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 [data-am-link~='arrow'] {
