--- a/src/assets/toolkit/styles/modules/tile-grid/tile-grid-sm.scss
+++ b/src/assets/toolkit/styles/modules/tile-grid/tile-grid-sm.scss
@@ -7,4 +7,9 @@
   .tile {
     margin-left: -1px;
   }
+
+  .tile-content {
+    padding-left: $gutter-half;
+    padding-right: $gutter-half;
+  }
 }
