--- a/src/assets/toolkit/styles/partials/variables/global-variables.scss
+++ b/src/assets/toolkit/styles/partials/variables/global-variables.scss
@@ -1,1 +1,4 @@
-$g-box-shadow: 0 0 30px $c-fade-dark-20;
+$g-box-shadow: 0 0 60px $c-fade-dark-20;
+
+$g-app-gutter: $gutter;
+$g-app-gutter-md: $gutter-triple;
