--- a/src/assets/toolkit/styles/modules/app/app.scss
+++ b/src/assets/toolkit/styles/modules/app/app.scss
@@ -1,15 +1,18 @@
 [data-am-app] {
   .app-section {
     display: block;
-    padding-left: $gutter;
-    padding-right: $gutter;
+    padding-left: $g-app-gutter;
+    padding-right: $g-app-gutter;
 
     & + .app-section {
-      margin-top: $gutter-triple;
+      margin-top: $gutter-quadruple;
     }
   }
 
   .app-section-viewport {
+    @include flex-display;
+    @include flex-direction(column);
+    @include justify-content(center);
     height: 100vh;
   }
 }
