Added more core components

--- a/src/assets/toolkit/styles/imports/imports-md.scss
+++ b/src/assets/toolkit/styles/imports/imports-md.scss
@@ -3,5 +3,6 @@
 
 // Modules
 @import '../modules/app/app-md';
+@import '../modules/button/button-md';
 @import '../modules/footer/footer-md';
 @import '../modules/tile-grid/tile-grid-md';
