--- a/src/assets/toolkit/styles/imports/imports.scss
+++ b/src/assets/toolkit/styles/imports/imports.scss
@@ -17,9 +17,12 @@
 
 // Modules
 @import '../modules/app/app';
+@import '../modules/button/button';
 @import '../modules/content/content';
 @import '../modules/footer/footer';
+@import '../modules/header/header';
 @import '../modules/label/label';
 @import '../modules/link/link';
+@import '../modules/main-navigation/main-navigation';
 @import '../modules/overflow-grid/overflow-grid';
 @import '../modules/tile-grid/tile-grid';
