--- a/src/assets/toolkit/styles/partials/variables/colors.scss
+++ b/src/assets/toolkit/styles/partials/variables/colors.scss
@@ -26,6 +26,7 @@ $c-text-on-secondary:   $-c-brand-gray;
 
 // Background
 $c-bg:                  $-c-brand-gray;
+$c-bg-inverted:         $-c-white;
 
 // Border
 $c-border:              lighten($-c-brand-gray, 2%); // TODO: Change
