--- a/src/views/layouts/default.html
+++ b/src/views/layouts/default.html
@@ -6,7 +6,7 @@
 
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 	<!-- toolkit CSS -->
 	{{#if fabricator}}<link rel="stylesheet" href="{{baseurl}}/assets/fabricator/styles/f.css">{{/if}}
@@ -16,7 +16,7 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 	<!-- CSS -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:900|Roboto:300,900" rel="stylesheet">
 	<link rel="stylesheet" href="{{baseurl}}/assets/toolkit/styles/default.css">
 
 </head>
