--- a/src/assets/toolkit/styles/partials/keyframes/keyframes.scss
+++ b/src/assets/toolkit/styles/partials/keyframes/keyframes.scss
@@ -1,10 +1,18 @@
-// sass-lint:disable empty-line-between-blocks
+// Generic
 
 @include keyframes(fadeIn) {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
+  }
+}
+
+@include keyframes(no-transform) {
+  100% {
+    @include transform(none);
+    border-radius: 0;
   }
 }
