--- a/src/assets/toolkit/styles/partials/typography/typography.scss
+++ b/src/assets/toolkit/styles/partials/typography/typography.scss
@@ -22,7 +22,7 @@ h5,
 .h5,
 h6,
 .h6 {
-  @include font-bold;
+  @include font-heading;
   line-height: 1.2;
   color: $c-text-light;
   margin-top: 0;
@@ -32,7 +32,7 @@ h6,
 
 h1,
 .h1 {
-  font-size: 2.25rem;
+  font-size: 3rem;
 }
 
 h2,
